<resources>
    <string name="app_name">ExcelentChild</string>
    <string name="excelentchild">ExcelentChild</string>
    <string name="logout">Logout</string>
    <string name="welcome_you_are_logged_in">Welcome, You are logged in.</string>
    <string name="encourage_word">Encourage word</string>
    <string name="child_details">child details</string>
    <string name="child_summary">Child Summary</string>
    <string name="back">Back</string>
    <string name="submit">submit</string>
    <string name="child_behaviour_summary">Child Behaviour Summary</string>
    <string name="select_day">Select Day</string>
    <string name="select_child_name">Select Child Name</string>
    <string name="close">Close</string>
    <string name="monday">Monday</string>
    <string name="homework">HomeWork</string>
    <string name="excessive_playing">Excessive Playing</string>
    <string name="eating">Eating</string>
    <string name="excessive_phone_use">Excessive Phone Use</string>
    <string name="no_record_fond">No Record Found</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="average">Average</string>
    <string name="select_behavior">Select Behavior</string>
</resources>
