<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="400dp"
    >



    <LinearLayout
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

            <TextView
                android:text="@string/monday"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:tag="@string/monday"
                android:text="@string/no_record_fond"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:text="@string/tuesday"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:tag="@string/tuesday"
                android:text="@string/no_record_fond"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:text="@string/wednesday"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:tag="@string/wednesday"
                android:text="@string/no_record_fond"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:text="@string/thursday"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:tag="@string/thursday"
                android:text="@string/no_record_fond"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:text="@string/friday"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:tag="@string/friday"
                android:text="@string/no_record_fond"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:text="@string/saturday"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:tag="@string/saturday"
                android:text="@string/no_record_fond"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:text="@string/sunday"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:tag="@string/sunday"
                android:text="@string/no_record_fond"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/average"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:tag="@string/average"
                    android:text="@string/no_record_fond"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    />


            </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_below="@+id/des"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        />

</RelativeLayout>