<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">



    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logout_button"
        android:layout_marginRight="20dp"
        android:text="@string/logout"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/image_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/logout"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="104dp"
            app:srcCompat="@drawable/child" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excelentchild"
            android:textColor="#25982E"
            />


    </LinearLayout>


    <Button
        android:id="@+id/surprise"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="#FFFFFF"
        android:text="surprise message"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_pane"
        android:layout_centerVertical="true"
        android:layout_marginTop="81dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/encourage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_round"
            android:text="@string/encourage_word"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/childDetils"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/encourage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_round"
            android:text="@string/child_details"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/childSummary"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/childDetils"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_round"
            android:text="@string/child_summary"
            android:textColor="@android:color/white" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_you_are_logged_in"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        />

</RelativeLayout>