<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">


    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/child_behaviour_summary"
        android:gravity="center"
        >
    </TextView>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_centerVertical="true"
        android:layout_marginTop="218dp"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#25982E"
            android:text="@string/select_day"
            android:layout_gravity="center"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/mySpinner"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_row="0"
            android:layout_column="1" />


        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:background="#25982E"
            android:text="@string/select_child_name"
            android:layout_gravity="center"
            android:textColor="#FFFFFF" />


        <Spinner
            android:id="@+id/mySpinner2"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_row="1"
            android:layout_column="1" />


    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/button4"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:background="@drawable/sub_button"
            android:text="@string/submit"
            android:textColor="#5E88B8"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/back"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:background="@drawable/sub_button"
            android:text="@string/back"
            android:textColor="#5E88B8"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button4"
         />

    </RelativeLayout>






</RelativeLayout>